--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -25,7 +25,6 @@
 
 .main h1 {
     font-size: 18pt;
-    margin-bottom: 4mm;
 }
 
 .main h1::before {
@@ -43,8 +42,12 @@
 .main h2 {
     font-size: 12pt;
     color: var(--primary-color);
-    margin: 4mm 0;
+    /* margin: 4mm 0; */
 }
+
+/* .main h2:first-of-type {
+    margin-top: 0;
+} */
 
 .main p {
     text-align: justify;
@@ -53,17 +56,21 @@
 .main > header {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
     min-height: 50mm;
     height: 50mm;
     padding-left: 10mm;
+    gap: 7mm;
+
+    background-image: url("/header-logo.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: right;
 }
 
 .avatar {
     border-radius: 100%;
     height: 30mm;
-    margin-right: 5mm;
 
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
@@ -74,15 +81,12 @@
 
 .name {
     font-size: 36pt;
+    white-space: nowrap;
 }
 
 .job {
     font-size: 18pt;
     color: var(--primary-color);
-}
-
-.image {
-    height: 100%;
 }
 
 .main > footer {
