--- a/components/PrintPage/PrintPage.module.css
+++ b/components/PrintPage/PrintPage.module.css
@@ -1,44 +1,48 @@
-/* CSS declarations go here */
-
-.main {
+.root {
     -webkit-print-color-adjust: exact;
 
-    width: 210mm;
-    height: 296.9mm;
+    width: var(--page-width);
+    min-width: var(--page-width);
+    max-width: var(--page-width);
+
+    height: var(--page-height);
+    min-height: var(--page-height);
+    max-height: var(--page-height);
+
     font-family: "Roboto", sans-serif;
     font-size: 9pt;
 
     display: flex;
     flex-direction: column;
 
-    --primary-color: #45A345;
-    --primary-color-darker: #2F893F;
-    --primary-color-darkest: #255C2C;
+    background-color: white;
+    position: relative;
+    z-index: 0;
 }
 
-.main #sh1 {
+.root #sh1 {
     fill: var(--primary-color);
 }
 
-.main h1,
-.main h2 {
+.root h1,
+.root h2 {
     text-transform: uppercase;
 }
 
-.main h1 {
+.root h1 {
     font-size: 18pt;
 }
 
-.main h2 {
+.root h2 {
     font-size: 12pt;
     color: var(--primary-color);
 }
 
-.main p {
+.root p {
     text-align: justify;
 }
 
-.main > header {
+.root > header {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -73,7 +77,7 @@
     color: var(--primary-color);
 }
 
-.main > footer {
+.root > footer {
     background: var(--primary-color);
     height: 8mm;
     
