--- a/components/PrintDocument/PrintDocument.module.css
+++ b/components/PrintDocument/PrintDocument.module.css
@@ -13,7 +13,9 @@
     }
 
     .root > * {
+        margin: 0 auto;
         border-radius: 8px;
         overflow: hidden;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     }
 }
