--- a/components/PrintPage/PrintPage.module.css
+++ b/components/PrintPage/PrintPage.module.css
@@ -55,12 +55,64 @@
 }
 
 .avatar {
+    z-index: 0;
+    position: relative;
     border-radius: 100%;
-    height: 30mm;
 
-    box-shadow: 0 0 0px 4pt var(--primary-color);
-    border: 4pt solid var(--primary-color-darker);
+    --gutter: 8pt;
+    --size: calc(30mm + var(--gutter));
+    
+
+    height: var(--size);
+    width: var(--size);
+
+    background-color: var(--primary-color);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.avatar > *,
+.avatar::after,
+.avatar::before {
+    height: inherit;
+    width: inherit;
+}
+
+.avatar::after,
+.avatar::before {
+    --rest: calc(var(--size) - var(--margin));
+    --amplitude: calc(var(--gutter) / 2);
+
+    position: absolute;
+    border-radius: 50%;
+    content: ' ';
+
+    height: var(--rest);
+    width: var(--rest);
+}
+
+.avatar::before {
+    --margin: var(--gutter);
+    z-index: 1;
+    background-color: var(--primary-color-darker);
+}
+
+.avatar::after {
+    --margin: calc(var(--gutter) * 2);
+    z-index: 2;
     background-color: var(--primary-color-darkest);
+}
+
+.avatar > * {
+    position: absolute;
+    z-index: 3;
+    object-fit: contain;
+    border-radius: 50%;
+    overflow: hidden;
+    height: 30mm;
+    width: 30mm;
 }
 
 .profile {
@@ -96,4 +148,42 @@
     z-index: -1;
     height: 100%;
     width: auto;
+}
+
+
+
+
+@media screen {
+    @keyframes avatar-disc {
+        0% {
+          height: calc(var(--rest) + var(--amplitude) + var(--offset));
+          width: calc(var(--rest) + var(--amplitude) + var(--offset));
+        }
+      
+        45% {
+            height: calc(var(--rest) - var(--amplitude) + var(--offset));
+            width: calc(var(--rest) - var(--amplitude) + var(--offset));
+        }
+      
+        100% {
+            height: calc(var(--rest) + var(--amplitude) + var(--offset));
+            width: calc(var(--rest) + var(--amplitude) + var(--offset));
+        }
+    }
+
+    .avatar {
+        --duration: 1.8s;
+    }
+
+    .avatar::before {
+        --amplitude: 2pt;
+        --offset: -4pt;
+        animation: var(--duration) ease-in-out calc((25/100) * var(--duration)) infinite normal none running avatar-disc;
+    }
+    
+    .avatar::after {
+        --amplitude: 4pt;
+        --offset: -8pt;
+        animation:  var(--duration) ease-in-out 0s infinite normal none running avatar-disc;
+    }
 }
