--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,27 @@
   --primary-color: #45A345;
   --primary-color-darker: #2F893F;
   --primary-color-darkest: #255C2C;
+  --accent-color: var(--primary-color);
+
+  /* --primary-color: #4cc9f0;
+  --primary-color-darker: #4361ee;
+  --primary-color-darkest: #3a0ca3;
+  --accent-color: var(--primary-color); */
+
+  /* --primary-color: #b298dc;
+  --primary-color-darker: #a663cc;
+  --primary-color-darkest: #6f2dbd;
+  --accent-color: var(--primary-color); */
+
+  /* --primary-color: #57cc99;
+  --primary-color-darker: #38a3a5;
+  --primary-color-darkest: #22577a;
+  --accent-color: var(--primary-color-darker); */
+
+  /* --primary-color: #e9c46a;
+  --primary-color-darker: #2a9d8f;
+  --primary-color-darkest: #264653;
+  --accent-color: var(--primary-color-darker); */
 }
 
 @media print {
