--- a/styles/Resume.module.css
+++ b/styles/Resume.module.css
@@ -57,7 +57,7 @@
     padding: 1mm 2mm;
     border-radius: 3mm;
     line-height: 1em;
-    background: var(--primary-color);
+    background: var(--accent-color);
 }
 
 
