--- a/components/Training/Training.module.css
+++ b/components/Training/Training.module.css
@@ -3,7 +3,6 @@
     flex-direction: column;
 }
 
-
 .root h3 {
     display: flex;
     flex-direction: row;
@@ -11,10 +10,7 @@
     font-size: 12pt;
     text-transform: uppercase;
     color: var(--accent-color);
-}
-
-.root h3 > :not(.period) {
-    flex: 1;
+    font-weight: 600;
 }
 
 .root h4 {
@@ -45,4 +41,14 @@
     background-size: contain;
     background-repeat: no-repeat;
     vertical-align: -9.5%;
+}
+
+.name {
+    flex: 1;
+}
+
+.period {
+    font-family: var(--font-geist-sans);
+    font-weight: 500;
+    font-size: 11pt;
 }
