--- a/components/PrintPage/PrintPage.module.css
+++ b/components/PrintPage/PrintPage.module.css
@@ -9,14 +9,16 @@
     min-height: var(--page-height);
     max-height: var(--page-height);
 
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-geist-sans);
     font-size: 9pt;
+    letter-spacing: -0.06sem;
 
     display: flex;
     flex-direction: column;
 
     background-color: white;
     position: relative;
+    isolation: isolate;
     z-index: 0;
 }
 
@@ -122,6 +124,7 @@
 .name {
     font-size: 36pt;
     white-space: nowrap;
+    letter-spacing: -0.04em;
 }
 
 .job {
@@ -149,9 +152,6 @@
     height: 100%;
     width: auto;
 }
-
-
-
 
 @media screen {
     @keyframes avatar-disc {
@@ -186,4 +186,32 @@
         --offset: -8pt;
         animation:  var(--duration) ease-in-out 0s infinite normal none running avatar-disc;
     }
+}
+
+
+.hand {
+    position: absolute;
+    font-size: 26pt;
+    text-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    display: inline-block;
+}
+
+@media screen {
+    .hand {
+        animation-name: hand-wave-animation;
+        animation-duration: 2.5s;
+        animation-iteration-count: infinite;  /* Never stop waving :) */
+        transform-origin: 70% 70%;       /* Pivot around the bottom-left palm */
+    }
+}
+
+@keyframes hand-wave-animation {
+    0% { transform: rotate( 0.0deg) }
+   10% { transform: rotate(14.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
+   20% { transform: rotate(-8.0deg) }
+   30% { transform: rotate(14.0deg) }
+   40% { transform: rotate(-4.0deg) }
+   50% { transform: rotate(10.0deg) }
+   60% { transform: rotate( 0.0deg) }  /* Reset for the last half to pause */
+  100% { transform: rotate( 0.0deg) }
 }
