--- a/components/PrintPage/PrintPage.module.css
+++ b/components/PrintPage/PrintPage.module.css
@@ -15,11 +15,13 @@
 
     display: flex;
     flex-direction: column;
-
-    background-color: white;
+    
     position: relative;
     isolation: isolate;
     z-index: 0;
+
+    background-color: var(--bg-color-light);
+    color: var(--text-color-dark);
 }
 
 .root #sh1 {
