--- a/styles/Resume.module.css
+++ b/styles/Resume.module.css
@@ -5,21 +5,21 @@
 
 .root aside {
     padding: 7mm 10mm;
-    background: var(--bg-color-dark);
+    
     width: 30%;
-    color: var(--text-color-light);
+    background: var(--bg-secondary);
 
     display: flex;
     flex-direction: column;
     gap: 7mm;
 
     border-radius: 0 8px 8px 0;
-
-    --accent-color: var(--accent-color-dark);
 }
 
-.root aside ul > li a {
-    color: inherit;
+.root aside a,
+.root aside p,
+.root aside li {
+    color: var(--text-base);
 }
 
 .content {
@@ -56,10 +56,11 @@
     flex-wrap: wrap;
 }
 
-.tags > li {
+.root aside .tags > li {
     display: inline-block;
     padding: 1mm 2mm;
     border-radius: 3mm;
     line-height: 1em;
-    background: var(--accent-color);
+    background: var(--bg-tag);
+    color: var(--text-tag);
 }
